# swagger.json
@@ -5,6 +5,15 @@
     "version": "1.0.0",
     "description": "API para login, registro, consulta de usuários e transferências."
   },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
   "paths": {
     "/register": {
       "post": {
@@ -67,6 +76,7 @@
     "/transfer": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -85,15 +95,18 @@
         },
         "responses": {
           "201": { "description": "Transferência realizada" },
-          "400": { "description": "Erro de validação" }
+          "400": { "description": "Erro de validação" },
+          "401": { "description": "Token não fornecido ou inválido" }
         }
       }
     },
     "/transfers": {
       "get": {
         "summary": "Consultar transferências",
+        "security": [{ "bearerAuth": [] }],
         "responses": {
-          "200": { "description": "Lista de transferências" }
+          "200": { "description": "Lista de transferências" },
+          "401": { "description": "Token não fornecido ou inválido" }
         }
       }
     }
